# distributed

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
development/: conf_supervisor_pull.conf  conf_supervisor_simple.conf
distributed/: config.py  constants.py  home.py  workers.py
distributed/pull/: master.py  worker.py
distributed/push/: master.py  worker.py
distributed/simple/: master.py  worker.py
tests/: base.py  util.py
tests/medium/: test_home.py
tests/medium/pull/: test_master.py
tests/medium/simple/: test_master.py  test_worker.py
tests/small/: test_home.py
tests/small/pull/: test_master.py
