[tool.poetry]
name = "distributed"
version = "0.0.1"
description = "distributed demo or in action"
authors = ["Kaizhao Zhang <zhangkaizhao@gmail.com>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/zhangkaizhao/distributed"
repository = "https://github.com/zhangkaizhao/distributed"
documentation = "https://github.com/zhangkaizhao/distributed"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.4"
psutil = "^5.4"

[tool.poetry.dev-dependencies]
supervisor = {git = "https://github.com/Supervisor/supervisor"}
pytest = "^4.0"
pytest-aiohttp = "^0.3.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
mypy = "^0.650.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
